--- a/jupyter/notebooks/HW6.ipynb
+++ b/jupyter/notebooks/HW6.ipynb
@@ -1,9 +1,79 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "d03bd156",
+   "metadata": {},
+   "source": [
+    "# 테트리스를 해봅시다\n",
+    "\n",
+    "급하게 만들어서 오류가 있을 순 있지만\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "6428c5a7",
+   "execution_count": 39,
+   "id": "3f98e9c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "□□□□□□□□□\n",
+      "□□□□□▒□□□\n",
+      "□□□▒▒▒□□□\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□■\n",
+      "□□□□□□□□■\n",
+      "■□□□□□□□■\n",
+      "■■□□□□□■■\n",
+      "■■□□□□■■■\n",
+      "■■□□■■■■■\n",
+      "■■■□■■■■■\n",
+      "■■■□■■■■■\n",
+      "■■■■■■□■■\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "printTetris()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b52f62d7",
+   "metadata": {},
+   "source": [
+    "\n",
+    "현재 위의 그림과 같은 상태라면\n",
+    "\n",
+    "이번에 내려올 블럭을 잘 조종해서 라인을 클리어 해보세요\n",
+    "\n",
+    "소스는 첨부파일 HW6.py 참고\n",
+    "\n",
+    "\n",
+    "블럭 모양 바꾸기 : changeShape()\n",
+    "\n",
+    "블럭 아래로 한칸 내리기: down()\n",
+    "\n",
+    "블럭 왼쪽으로 한칸 이동: left()\n",
+    "\n",
+    "블럭 오른쪽으로 한칸 이동: right()\n",
+    "\n",
+    "\n",
+    "## 추가 내용 (선택)\n",
+    "\n",
+    "만약 할 수 있다면 블럭을 한번에 내리는 기능도 만들어 보세요\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "6d0dde0d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,8 +97,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "d2efdd65",
+   "execution_count": 38,
+   "id": "3742ee8a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "360a0061",
+   "id": "7474975a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,13 +148,14 @@
     "                print(\"■\", end=\"\")\n",
     "            elif tetris[_y][_x] == 0:\n",
     "                print(\"□\", end=\"\")\n",
-    "        print()\n"
+    "        print()\n",
+    "    print()\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3c834ce7",
+   "id": "31f8241b",
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +175,8 @@
       "■■□□■■■■■\n",
       "■■■□■■■■■\n",
       "■■■□■■■■■\n",
-      "■■■■■■□■■\n"
+      "■■■■■■□■■\n",
+      "\n"
      ]
     }
    ],
@@ -115,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9002ba71",
+   "id": "1f195911",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "8b30728a",
+   "id": "41f34a06",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "856b23b2",
+   "id": "a7eac886",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "bedf1437",
+   "id": "6f269d38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e60eeb52",
+   "id": "afdc37c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "d15103fb",
+   "id": "22791313",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "298c2631",
+   "id": "7b9d5e08",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "415d3574",
+   "id": "b9603fe7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "2c0bacfe",
+   "id": "219e4114",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "8380ad48",
+   "id": "f0ddf430",
    "metadata": {},
    "outputs": [
     {
@@ -285,12 +357,512 @@
       "■■□□■■■■■\n",
       "■■■□■■■■■\n",
       "■■■□■■■■■\n",
-      "■■■■■■□■■\n"
+      "■■■■■■□■■\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "printTetris()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fdef2e80",
+   "metadata": {},
+   "source": [
+    "# 정답"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "6fcd9885",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "□□□▒□□□□□\n",
+      "□□□▒□□□□□\n",
+      "□□□▒▒□□□□\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□■\n",
+      "□□□□□□□□■\n",
+      "■□□□□□□□■\n",
+      "■■□□□□□■■\n",
+      "■■□□□□■■■\n",
+      "■■□□■■■■■\n",
+      "■■■□■■■■■\n",
+      "■■■□■■■■■\n",
+      "■■■■■■□■■\n",
+      "\n",
+      "□□□□□□□□□\n",
+      "□□□▒▒▒□□□\n",
+      "□□□▒□□□□□\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□■\n",
+      "□□□□□□□□■\n",
+      "■□□□□□□□■\n",
+      "■■□□□□□■■\n",
+      "■■□□□□■■■\n",
+      "■■□□■■■■■\n",
+      "■■■□■■■■■\n",
+      "■■■□■■■■■\n",
+      "■■■■■■□■■\n",
+      "\n",
+      "□□□▒▒□□□□\n",
+      "□□□□▒□□□□\n",
+      "□□□□▒□□□□\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□■\n",
+      "□□□□□□□□■\n",
+      "■□□□□□□□■\n",
+      "■■□□□□□■■\n",
+      "■■□□□□■■■\n",
+      "■■□□■■■■■\n",
+      "■■■□■■■■■\n",
+      "■■■□■■■■■\n",
+      "■■■■■■□■■\n",
+      "\n",
+      "□□□□□□□□□\n",
+      "□□▒▒□□□□□\n",
+      "□□□▒□□□□□\n",
+      "□□□▒□□□□□\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□■\n",
+      "□□□□□□□□■\n",
+      "■□□□□□□□■\n",
+      "■■□□□□□■■\n",
+      "■■□□□□■■■\n",
+      "■■□□■■■■■\n",
+      "■■■□■■■■■\n",
+      "■■■□■■■■■\n",
+      "■■■■■■□■■\n",
+      "\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□□\n",
+      "□□▒▒□□□□□\n",
+      "□□□▒□□□□□\n",
+      "□□□▒□□□□□\n",
+      "□□□□□□□□■\n",
+      "□□□□□□□□■\n",
+      "■□□□□□□□■\n",
+      "■■□□□□□■■\n",
+      "■■□□□□■■■\n",
+      "■■□□■■■■■\n",
+      "■■■□■■■■■\n",
+      "■■■□■■■■■\n",
+      "■■■■■■□■■\n",
+      "\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□□\n",
+      "□□▒▒□□□□□\n",
+      "□□□▒□□□□□\n",
+      "□□□▒□□□□■\n",
+      "□□□□□□□□■\n",
+      "■□□□□□□□■\n",
+      "■■□□□□□■■\n",
+      "■■□□□□■■■\n",
+      "■■□□■■■■■\n",
+      "■■■□■■■■■\n",
+      "■■■□■■■■■\n",
+      "■■■■■■□■■\n",
+      "\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□□\n",
+      "□□▒▒□□□□□\n",
+      "□□□▒□□□□■\n",
+      "□□□▒□□□□■\n",
+      "■□□□□□□□■\n",
+      "■■□□□□□■■\n",
+      "■■□□□□■■■\n",
+      "■■□□■■■■■\n",
+      "■■■□■■■■■\n",
+      "■■■□■■■■■\n",
+      "■■■■■■□■■\n",
+      "\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□□\n",
+      "□□▒▒□□□□■\n",
+      "□□□▒□□□□■\n",
+      "■□□▒□□□□■\n",
+      "■■□□□□□■■\n",
+      "■■□□□□■■■\n",
+      "■■□□■■■■■\n",
+      "■■■□■■■■■\n",
+      "■■■□■■■■■\n",
+      "■■■■■■□■■\n",
+      "\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□■\n",
+      "□□▒▒□□□□■\n",
+      "■□□▒□□□□■\n",
+      "■■□▒□□□■■\n",
+      "■■□□□□■■■\n",
+      "■■□□■■■■■\n",
+      "■■■□■■■■■\n",
+      "■■■□■■■■■\n",
+      "■■■■■■□■■\n",
+      "\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□■\n",
+      "□□□□□□□□■\n",
+      "■□▒▒□□□□■\n",
+      "■■□▒□□□■■\n",
+      "■■□▒□□■■■\n",
+      "■■□□■■■■■\n",
+      "■■■□■■■■■\n",
+      "■■■□■■■■■\n",
+      "■■■■■■□■■\n",
+      "\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□■\n",
+      "□□□□□□□□■\n",
+      "■□□□□□□□■\n",
+      "■■▒▒□□□■■\n",
+      "■■□▒□□■■■\n",
+      "■■□▒■■■■■\n",
+      "■■■□■■■■■\n",
+      "■■■□■■■■■\n",
+      "■■■■■■□■■\n",
+      "\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□■\n",
+      "□□□□□□□□■\n",
+      "■□□□□□□□■\n",
+      "■■□□□□□■■\n",
+      "■■▒▒□□■■■\n",
+      "■■□▒■■■■■\n",
+      "■■■▒■■■■■\n",
+      "■■■□■■■■■\n",
+      "■■■■■■□■■\n",
+      "\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□■\n",
+      "□□□□□□□□■\n",
+      "■□□□□□□□■\n",
+      "■■□□□□□■■\n",
+      "■■□□□□■■■\n",
+      "■■▒▒■■■■■\n",
+      "■■■▒■■■■■\n",
+      "■■■▒■■■■■\n",
+      "■■■■■■□■■\n",
+      "\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□■\n",
+      "□□□□□□□□■\n",
+      "■□□□□□□□■\n",
+      "■■□□□□□■■\n",
+      "■■□□□□■■■\n",
+      "■■■■■■□■■\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for idx in range(3):\n",
+    "    changeShape()\n",
+    "left()\n",
+    "for idx in range(10):\n",
+    "    down()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "065a6c0f",
+   "metadata": {},
+   "source": [
+    "## 해설\n",
+    "\n",
+    "```\n",
+    "changeShape()\n",
+    "```\n",
+    "를 이용하여 모양을 맞춰지게 회전한 다음\n",
+    "\n",
+    "```\n",
+    "left()\n",
+    "```\n",
+    "\n",
+    "왼쪽으로 한칸 이동한 뒤\n",
+    "\n",
+    "```\n",
+    "down()\n",
+    "```\n",
+    "\n",
+    "으로 10번 아래로 내리면됩니다.\n",
+    "\n",
+    "내부적으로 충돌 감지 로직이 들어가 있어 경우에 따라 더 이상 진행을 못할 시 라인 클리어 로직을 호출하게 됩니다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "64836e1c",
+   "metadata": {},
+   "source": [
+    "## 블록 한번에 아래로 내리기 (선택)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aed2aacc",
+   "metadata": {},
+   "source": [
+    "다양한 방법이 있겠지만 `down()` 함수를 수정해보겠습니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "cf4f5546",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def down(slient = False):\n",
+    "    global x, y, shape\n",
+    "    if collisionCheck(x, y + 1, shape) == COLLISION_TYPE_NA:\n",
+    "        y = y + 1\n",
+    "    elif collisionCheck(x, y + 1, shape) == COLLISION_TYPE_BLOCK:\n",
+    "        mergeBlock()\n",
+    "        removeLine()\n",
+    "    if not slient:\n",
+    "        printTetris()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6308dfe8",
+   "metadata": {},
+   "source": [
+    "한줄씩 해석을 해보면 다음과 같습니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "36d1105f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def down(slient = False): # 아래로 내릴 때마다 인자 값으로 아래로 내린 결과를 출력할 것인지를 받아들이고 있습니다. 기본값 : 출력하지 않음\n",
+    "    global x, y, shape # 함수 외부 변수를 사용하기 위한 global 키워드\n",
+    "    \n",
+    "    # 해당 블록이 한칸 내려가면 일어날 충돌에 대한 판정 확인 조건문\n",
+    "    if collisionCheck(x, y + 1, shape) == COLLISION_TYPE_NA: # 충돌이 없다면\n",
+    "        y = y + 1 # 블록을 한칸 내림\n",
+    "    elif collisionCheck(x, y + 1, shape) == COLLISION_TYPE_BLOCK: # 기존 쌓여있는 블록들과 충돌을 하게 됨, \n",
+    "        # 즉, 아래로 갈 수 있는 영역의 마지노선에 도착\n",
+    "        mergeBlock() # 현재 블록과 기존의 쌓여있는 블록을 하나로 합침\n",
+    "        removeLine() # 삭제 가능한 가로줄을 확인하고 삭제함, 원래 테트리스면 이때 라인클리어 점수가 발생할 것\n",
+    "    if not slient: \n",
+    "        printTetris()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "482f4f6b",
+   "metadata": {},
+   "source": [
+    "여기서 생각해보면 충돌이 일어나기 전까지 반복문으로 블록을 내리는 로직이 추가되면\n",
+    "\n",
+    "블록을 한번에 내리는 기능을 만들어 낼 수 있습니다"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "08b258af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def down(slient = False, shoot = False): # 아래로 내릴 때마다 인자 값으로 아래로 내린 결과를 출력할 것인지를 받아들이고 있습니다. \n",
+    "    # 기본값 : 출력하지 않음\n",
+    "    global x, y, shape # 함수 외부 변수를 사용하기 위한 global 키워드\n",
+    "    \n",
+    "    if collisionCheck(x, y + 1, shape) == COLLISION_TYPE_BLOCK: # 기존 쌓여있는 블록들과 충돌을 하게 됨, \n",
+    "        # 즉, 아래로 갈 수 있는 영역의 마지노선에 도착\n",
+    "        mergeBlock() # 현재 블록과 기존의 쌓여있는 블록을 하나로 합침\n",
+    "        removeLine() # 삭제 가능한 가로줄을 확인하고 삭제함, 원래 테트리스면 이때 라인클리어 점수가 발생할 것\n",
+    "    \n",
+    "    while collisionCheck(x, y + 1, shape) == COLLISION_TYPE_NA: # 충돌이 없다면\n",
+    "        y = y + 1 # 블록을 한칸 내림\n",
+    "        if not shoot: # 한번에 내리는것이 아닐때\n",
+    "            break; # 반복문은 오직 한번만 동작하게끔 break 문으로 빠져나옴\n",
+    "            \n",
+    "    if not slient: \n",
+    "        printTetris()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "ac220ad3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "□□□□□□□□□\n",
+      "□□□□□▒□□□\n",
+      "□□□▒▒▒□□□\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□■\n",
+      "□□□□□□□□■\n",
+      "■□□□□□□□■\n",
+      "■■□□□□□■■\n",
+      "■■□□□□■■■\n",
+      "■■□□■■■■■\n",
+      "■■■□■■■■■\n",
+      "■■■□■■■■■\n",
+      "■■■■■■□■■\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "printTetris()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "9231f786",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "□□□▒□□□□□\n",
+      "□□□▒□□□□□\n",
+      "□□□▒▒□□□□\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□■\n",
+      "□□□□□□□□■\n",
+      "■□□□□□□□■\n",
+      "■■□□□□□■■\n",
+      "■■□□□□■■■\n",
+      "■■□□■■■■■\n",
+      "■■■□■■■■■\n",
+      "■■■□■■■■■\n",
+      "■■■■■■□■■\n",
+      "\n",
+      "□□□□□□□□□\n",
+      "□□□▒▒▒□□□\n",
+      "□□□▒□□□□□\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□■\n",
+      "□□□□□□□□■\n",
+      "■□□□□□□□■\n",
+      "■■□□□□□■■\n",
+      "■■□□□□■■■\n",
+      "■■□□■■■■■\n",
+      "■■■□■■■■■\n",
+      "■■■□■■■■■\n",
+      "■■■■■■□■■\n",
+      "\n",
+      "□□□▒▒□□□□\n",
+      "□□□□▒□□□□\n",
+      "□□□□▒□□□□\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□■\n",
+      "□□□□□□□□■\n",
+      "■□□□□□□□■\n",
+      "■■□□□□□■■\n",
+      "■■□□□□■■■\n",
+      "■■□□■■■■■\n",
+      "■■■□■■■■■\n",
+      "■■■□■■■■■\n",
+      "■■■■■■□■■\n",
+      "\n",
+      "□□□□□□□□□\n",
+      "□□▒▒□□□□□\n",
+      "□□□▒□□□□□\n",
+      "□□□▒□□□□□\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□■\n",
+      "□□□□□□□□■\n",
+      "■□□□□□□□■\n",
+      "■■□□□□□■■\n",
+      "■■□□□□■■■\n",
+      "■■□□■■■■■\n",
+      "■■■□■■■■■\n",
+      "■■■□■■■■■\n",
+      "■■■■■■□■■\n",
+      "\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□□\n",
+      "□□□□□□□□■\n",
+      "□□□□□□□□■\n",
+      "■□□□□□□□■\n",
+      "■■□□□□□■■\n",
+      "■■□□□□■■■\n",
+      "■■▒▒■■■■■\n",
+      "■■■▒■■■■■\n",
+      "■■■▒■■■■■\n",
+      "■■■■■■□■■\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for idx in range(3):\n",
+    "    changeShape()\n",
+    "left()\n",
+    "down(shoot=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5624d512",
+   "metadata": {},
+   "source": [
+    "`while` 문을 이용하여 한번에 내리는 기능을 추가할 수 있었습니다."
    ]
   }
  ],
